# foster

./: .gitignore  .hgignore  CMakeLists.txt  FosterConfig.in.h  Makefile  README.txt  run_antlr.py
compiler/: ANTLRtoFosterAST.cpp  ANTLRtoFosterAST.h  CodegenPass.cpp  CodegenPass.h  CompilationContext.cpp  FosterAST.cpp  FosterAST.h  FosterASTTransformer.decls.inc.h  FosterASTVisitor.base.inc.h  FosterASTVisitor.decls.inc.h  FosterASTVisitor.h  FosterTypeAST.cpp  FosterTypeAST.h  FosterUtils.cpp  FosterUtils.h  InputFile.cpp  InputFile.h  PrettyPrintPass.cpp  PrettyPrintPass.h  SourceRange.cpp  SourceRange.h  StandardPrelude.cpp  TypecheckPass.cpp  TypecheckPass.h  foster.cpp  fostercheck.cpp  fosterlower.cpp  fosteroptc.cpp  fosterparse.cpp
compiler/base/: Assert.cpp  Assert.h  Assert_unittest.cpp  Diagnostics.cpp  Diagnostics.h  FilteringIterator.h  FilteringIterator_unittest.cpp  FreshNameGenerator.cpp  FreshNameGenerator_unittest.cpp  GenericGraph_unittest.cpp  InputFile.cpp  InputFile.h  InputTextBuffer.cpp  LLVMUtils.cpp  PathManager.cpp  PathManager.h  PathManager_unittest.cpp  PughSinofskyPrettyPrinter.cpp  PughSinofskyPrettyPrinter_unittest.cpp  SingleIntegerRange.cpp  SingleIntegerRange_unittest.cpp  SourceRange.cpp  SourceRange_unittest.cpp  TimingsRepository.cpp
compiler/cfg/: CFG.cpp  CFG.h
compiler/fraz/: Cargo.toml  build.rs  extract_token_defs.py
compiler/fraz/inc/: fosterlexer.h
compiler/fraz/src/: fosterlexer.re  lex.rs  lib.rs  parz.rs  syn.rs  tcdag.rs  tochez.rs
compiler/me/: cabal.project  me.cabal  me.lkshw  mki.sh  mkproto.sh  stack.yaml
compiler/me/src/: Main.hs
compiler/me/src/Foster/: AnnExpr.hs  AnnExprIL.hs  Avails.hs  Base.hs  BaseUtils.hs  CFG.hs  CFGOptimization.hs  CapnpIL.hs  CloConv.hs  Config.hs  Context.hs  ConvertExprAST.hs  ExprAST.hs  FromHaskell.hs  GCRoots.hs  HashCache.hs  HooplDominatorPass.hs  ILExpr.hs  Infer.hs  KNExpr.hs  KNStaticChecks.hs  KNUtil.hs  KSmallstep.hs  Kind.hs  LLExpr.hs  Letable.hs  MKNExpr.hs  MainCtorHelpers.hs  MainOpts.hs  MonoExpr.hs  MonoLetable.hs  MonoType.hs  Monomo.hs  Output.hs  ParsedType.hs  PatternMatch.hs  PrettyAnnExpr.hs  PrettyExprAST.hs  Primitives.hs  ProtobufFE.hs  (+13 more)
compiler/parse/: ANTLRTokenDump.cpp  ANTLRtoFosterAST.cpp  ANTLRtoFosterAST.h  ANTLRtoFosterAST_unittest.cpp  ANTLRtoFosterErrorHandling.cpp  CompilationContext.cpp  DefaultExprASTVisitor.cpp  DumpStructure.cpp  FosterAST.cpp  FosterAST.h  FosterAST.proto  FosterASTVisitor.base.inc.h  FosterASTVisitor.decls.inc.h  FosterASTVisitor.h  FosterIL.capnp  FosterIL.proto  FosterLL.proto  FosterSymbolTable.cpp  FosterSymbolTable.h  FosterSymbolTableTraits-inl.h  FosterTypeAST.cpp  FosterTypeAST.h  FosterUtils.cpp  OperatorPrecedence.cpp  ParsingContext.cpp  ProtobufToAST.cpp  ProtobufToAST_unittest.cpp  ProtobufToLLExpr.cpp  ProtobufUtils.cpp  TypeInference_unittest.cpp
compiler/passes/: AddParentLinksPass.cpp  AddParentLinksPass.h  BuildCFG.cpp  CapnpToLLExpr.cpp  CaptureAvoidingSubstitution.cpp  ClosureConversionPass.cpp  ClosureConversionPass.h  CodegenPass.cpp  CodegenPass.h  ComputeFreeNames.cpp  ComputeFreeNames_unittest.cpp  DumpStructure.cpp  DumpToProtobuf.cpp  ExprASTDiff.cpp  LLCodegen.cpp  PassUtils.cpp  PrettyPrintPass.cpp  PrettyPrintPass.h  ProtobufToLLExpr.cpp  PughSinofskyPrettyPrinter.cpp  PughSinofskyPrettyPrinter_unittest.cpp  ReplaceExprTransform.cpp  ReplaceExprTransform.h  ReplaceTypeTransform.cpp  TypecheckPass.cpp  TypecheckPass.h
doc/formal/: Makefile  foster.ott
grammar/: foster.g  foster.gunit  foster_orig.g
grammar/foster/: foster-lexer-parser.foster  foster-parser-imm.foster  foster-tokenizer-imm.foster  notes.txt
grammar/output/: javaMakefile
notes/: Makefile  arrays.rst  autobuild.sh  bench.rst  c-libraries.txt  c-types.rst  checklist.rst  closureconversion.rst  compiled-examples.rst  compiler-history.rst  compiler-overview.rst  compiler.rst  concurrency.rst  cond-vs-lookupwith.rst  conf.py  coro.rst  decl.rst  design-notes.rst  dive-into-foster.rst  exn-syntax-examples.txt  features.rst  fosterlower.rst  gc-let-roots.txt  gc.rst  gcroots.txt  handlers.rst  hashtables.rst  if-syntax.txt  index-internals.rst  index.rst  inference.rst  inlining.rst  integers.rst  lambda-syntax.txt  lexer-parser.rst  lua-coro-examples.txt  match-compilation.rst  misc.rst  mp-ints.txt  mutation.rst  (+17 more)
notes/_static/: foster-rtd.css
notes/eventually/: scratchpad-20231023.foster  syntax-errors-cram-all.t
notes/obsolete/: closures.txt  desugaring.txt  inference.txt  misc.txt  notes.txt  proc-func-clos.txt  todo-circa2012.txt
runtime/: clocktimer.h  foster_globals.cpp  foster_globals.h  libfoster.cpp  libfoster.h  libfoster_c2f.cpp  libfoster_coro.cpp  libfoster_gc_roots.cpp  libfoster_gc_roots.h  libfoster_main.cpp  libfoster_posix.cpp  libfoster_util.h  ptr_fifo.h  stat_tracker.h
runtime/gc/: bitmap.h  foster_gc.cpp  foster_gc.h  foster_gc_backtrace_x86-inl.h  foster_gc_marksweep.cpp  foster_gc_stackmaps.cpp  foster_gc_utils.h  gc_helpers.h  memory_range.h
scripts/: README.txt  __init__.py  align-on-first.py  ansifilter.py  bench-all.py  bench-diff.py  bench-ize.py  build_hdrhist.py  build_libfoster.py  c2foster  checkout-llvm-trunk.sh  clang-ast-filter.py  cmdparse_codefiles.py  compare-opcodemix.py  compare-perf.sh  countlines.sh  cp_me.sh  csmith-minimal.sh  csmith2foster.py  echo-fosterdir  echo-llvmdir  emcc-foster  extract-antlr3-token-ids.py  extract-fn.sh  fack  filter-me-prof  fit.py  foster.py  fosterc  fosterc-standalone  fosterc.py  gdbtest.sh  gen_testSubInt64.py  gotest.sh  gtest_wrapper.py  inspect-fn.py  install-llvm.sh  list_all.py  longest_common_substring.py  mk_gc_reconfig_h.py  (+21 more)
stdlib/base64/: base64.foster
stdlib/bignat/: bignat.foster
stdlib/bignum/: bignum.foster
stdlib/bitwise/: bitwise.foster
stdlib/bootstrapped-queue/: bootstrapped-queue.foster
stdlib/bytes/: bytes.foster
stdlib/c2f/: c2f.foster
stdlib/cbor/: cbor.foster
stdlib/coro/: coro.foster
stdlib/fmt/: fmt.foster
stdlib/io/: readfile.foster
stdlib/lazy/: lazy.foster
test/: README.txt
(+729 files in other folders)
